# hello-rs

./: Cargo.toml  README.md  docker-compose-jemalloc.yaml  docker-compose.yaml  otel-collector-config.yaml
.github/: dependabot.yml
hello-axum/: Cargo.toml  Dockerfile  Dockerfile-jemalloc  build-docker-jemalloc.sh  build-docker.sh  build.rs
hello-axum/config/: default.toml
hello-axum/proto/: hello.proto
hello-axum/src/: hello_tonic_client.rs  init_tracing.rs  lib.rs  main.rs  server.rs
hello-tonic-client/: Cargo.toml
hello-tonic-client/config/: default.toml
hello-tonic-client/proto/: hello.proto
hello-tonic-client/src/: lib.rs  main.rs
hello-tonic-server/: Cargo.toml  Dockerfile  Dockerfile-jemalloc  build-docker-jemalloc.sh  build-docker.sh
hello-tonic-server/config/: default.toml
hello-tonic-server/src/: lib.rs  main.rs  server.rs
