[workspace]
members = [ "hello-axum", "hello-tonic-client", "hello-tonic-server" ]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
authors       = [ "Heiko Seeberger" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/hello-rs"
repository    = "https://github.com/hseeberger/hello-rs"
documentation = "https://github.com/hseeberger/hello-rs"

[workspace.dependencies]
anyhow                = { version = "1" }
axum                  = { version = "0.6.0-rc.2", features = [ "http2", "json" ] }
configured            = { version = "0" }
futures               = { version = "0" }
opentelemetry         = { version = "0", default-features = false, features = [ "rt-tokio" ] }
opentelemetry-otlp    = { version = "0", default-features = false, features = [ "trace", "grpc-tonic" ] }
prost                 = { version = "0" }
serde                 = { version = "1", features = [ "derive" ] }
tokio                 = { version = "1", features = [ "full" ] }
tonic                 = { version = "0" }
tonic-build           = { version = "0" }
tower                 = { version = "0" }
tower-http            = { version = "0", features = [ "trace" ] }
tracing               = { version = "0", default-features = false, features = [ "std", "attributes" ] }
tracing-opentelemetry = { version = "0", default-features = false }
tracing-subscriber    = { version = "0", default-features = false, features = [ "fmt", "env-filter", "json" ] }
walkdir               = { version = "2" }
