[package]
name          = "hello-axum"
description   = "Axum demo"
version       = "0.1.0"
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/hello-axum"
repository    = "https://github.com/hseeberger/hello-axum"
documentation = "https://github.com/hseeberger/hello-axum"

[dependencies]
anyhow                = { workspace = true }
axum                  = { workspace = true }
configured            = { workspace = true }
futures               = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
prost                 = { workspace = true, optional = true }
rand                  = { workspace = true }
serde                 = { workspace = true }
tokio                 = { workspace = true }
tonic                 = { workspace = true, optional = true }
tower                 = { workspace = true }
tower-http            = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[build-dependencies]
anyhow      = { version = "1" }
tonic-build = { version = "0", optional = true }
walkdir     = { version = "2", optional = true }

[features]
jemalloc = [ "dep:tikv-jemallocator" ]
proxy    = [ "dep:prost", "dep:tonic", "dep:tonic-build", "dep:walkdir" ]
