[package]
name                   = "hello-tonic-server"
description            = "Server for the tonic demo"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
readme.workspace       = true
homepage.workspace     = true
homepage.repository    = true
homepage.documentation = true

[dependencies]
anyhow                = { workspace = true }
configured            = { workspace = true }
futures               = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
prost                 = { workspace = true }
serde                 = { workspace = true }
tokio                 = { workspace = true }
tonic                 = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }
tower                 = { workspace = true }
tower-http            = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[build-dependencies]
anyhow      = { workspace = true }
tonic-build = { workspace = true }
walkdir     = { workspace = true }

[features]
jemalloc = [ "dep:tikv-jemallocator" ]
